Add validation for the version
The validation checks that the version is taggable using git.

For this, we need to use an image that has git so might as well use
Shipyard's image which already has git (anbd a bunch of other things).

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,6 +1,7 @@
-FROM mikefarah/yq:3.3.2
+FROM mikefarah/yq:3.3.2 as yq
+FROM quay.io/submariner/shipyard-dapper-base:devel
 
+COPY --from=yq /usr/bin/yq /usr/bin/
 ENV DAPPER_SOURCE=/releases
-ENV SCRIPTS_DIR=${DAPPER_SOURCE}/scripts
 
 WORKDIR ${DAPPER_SOURCE}
