Add E2E tests for target release
A symlink `target` denotes the release that's being tested, the E2E test
pulls the images that correspond to the target's versions (or commit
id's) and the subctl for that version, and uses subctl to test the
images in a standard Shipyard based deployment.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -2,6 +2,7 @@ FROM mikefarah/yq:3.3.2 as yq
 FROM quay.io/submariner/shipyard-dapper-base:devel
 
 COPY --from=yq /usr/bin/yq /usr/bin/
-ENV DAPPER_SOURCE=/releases
+ENV DAPPER_SOURCE=/releases PATH=/releases/scripts:$PATH DAPPER_DOCKER_SOCKET=true
+ENV DAPPER_OUTPUT=${DAPPER_SOURCE}/output
 
 WORKDIR ${DAPPER_SOURCE}
