Use `git clone` to clone the repo
This allows us to use full commit ids, short hashes and tags for the
components, and also allows us to fetch the correct image by calculating
the image version from the commit itself (in case its not a tag).

This should allow us to use `gh release` with short commit ids (which it
doesnt support).

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/example.yaml
+++ b/releases/example.yaml
@@ -16,7 +16,7 @@ release-notes: |
       by the administrator.
 components:
   admiral: v0.6.1  # tag is possible
-  submariner: v0.6.1
+  submariner: 7ffe614 # short commit-id is accepted
   lighthouse: v0.6.1
   submariner-operator: v0.6.1
   submariner-charts: 7cc50b03d3f6e3bc4fa75a6db344dea87693dea3 # full commit-id also
