Add pre-release support
We can now mark pre-releases in the YAML to be released as such.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/example.yaml
+++ b/releases/example.yaml
@@ -2,6 +2,7 @@
 # This example file shows a final release stage where the file has all the fields filled
 version: v0.6.1
 name: the mighty 0.6 release!  # The name will be used for the GH release
+pre-release: false # Set to `true` to release it as a pre-release
 # Contents of release notes should be markdown formatted as that's what
 # GitHub uses
 release-notes: |
