Add `status` field to track release stages
This should help track and push forward stages that aren't all-in-one
and have interactive components, such as creating patches for
Admiral/Shipyard.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/example.yaml
+++ b/releases/example.yaml
@@ -14,6 +14,7 @@ release-notes: |
   * deprecations: # optional
     * Features or settings that have been deprecated and need to be updated
       by the administrator.
+status: released
 components:
   admiral: v0.6.1  # tag is possible
   submariner: 7ffe614 # short commit-id is accepted
