Add Shipyard release state
This state has the CI release Shipyard and pin consuming projects to the
released version.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -3,7 +3,7 @@ FROM quay.io/submariner/shipyard-dapper-base:devel
 
 COPY --from=yq /usr/bin/yq /usr/bin/
 ENV DAPPER_SOURCE=/releases PATH=/releases/scripts:$PATH DAPPER_DOCKER_SOCKET=true \
-    DAPPER_ENV="GITHUB_TOKEN QUAY_USERNAME QUAY_PASSWORD RELEASE_TOKEN"
+    DAPPER_ENV="GITHUB_ACTOR GITHUB_TOKEN QUAY_USERNAME QUAY_PASSWORD RELEASE_TOKEN"
 ENV DAPPER_OUTPUT=${DAPPER_SOURCE}/output \
     GH_VERSION=1.0.0
 
