--- a/releases/example-partial.yaml
+++ b/releases/example-partial.yaml
@@ -1,11 +1,12 @@
 ---
-# This example file shows the partial stages where the automation will release either Shipyard
-# or Admiral and make sure consuming projects are updated to use the relased version.
-version: v0.6.1 # The version will be used to release Shipyard/Admiral
-name: the mighty 0.6 release! # The name will be used for the GH release (only on Shipyard/Admiral)
+# This example file shows the partial stages where the automation will release either Shipyard,
+# Admiral or Operator required projects and make sure consuming projects are updated to use the
+# relased version.
+version: v0.6.1 # The version will be used for the paritally release components
+name: the mighty 0.6 release! # The name will be used for the GH release
 # Contents of release notes should be markdown formatted as that's what
 # GitHub uses
-release-notes: | # These notes will apply only to Shipyard
+release-notes: | # These notes will apply only to the components being released
   * bugfixes:
     * we fixed this bug
   * features:
@@ -16,7 +17,9 @@ release-notes: | # These notes will apply only to Shipyard
   * deprecations: # optional
     * Features or settings that have been deprecated and need to be updated
       by the administrator.
-status: shipyard # Or 'admiral'
+status: shipyard # One of: shipyard, admiral, projects
 components:
   shipyard: 2254d86 # Only used if status is 'shipyard'
   admiral: a69b58d # Only used if status is 'admiral'
+  submariner: 7ffe614 # Only used if status is 'projects'
+  lighthouse: 6c78a05 # Only used if status is 'projects'
