Advance to next stage - admiral
Advancing the release to test next stage which is admiral

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.8.0-pre0.yaml
+++ b/releases/v0.8.0-pre0.yaml
@@ -6,6 +6,7 @@ pre-release: true
 # GitHub uses
 release-notes: |
   Here be dragons
-status: shipyard
+status: admiral
 components:
   shipyard: 7e63ce8
+  admiral: 434a610
