Projects release for 0.8.0-pre0
Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.8.0-pre0.yaml
+++ b/releases/v0.8.0-pre0.yaml
@@ -6,7 +6,9 @@ pre-release: true
 # GitHub uses
 release-notes: |
   Here be dragons
-status: admiral
+status: projects
 components:
   shipyard: 7e63ce8
   admiral: 434a610
+  submariner: 7121adc
+  lighthouse: 709bb81
