Final stage for v0.8.0-pre0
This is the final stage, solidifying the release.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.8.0-pre0.yaml
+++ b/releases/v0.8.0-pre0.yaml
@@ -6,9 +6,11 @@ pre-release: true
 # GitHub uses
 release-notes: |
   Here be dragons
-status: projects
+status: released
 components:
   shipyard: 7e63ce8
   admiral: 434a610
   submariner: 7121adc
   lighthouse: 709bb81
+  submariner-operator: f19ece0
+  submariner-charts: c22af2a
