--- a/releases/v0.8.0-rc0.yaml
+++ b/releases/v0.8.0-rc0.yaml
@@ -2,9 +2,11 @@
 version: v0.8.0-rc0
 name: 0.8.0-rc0
 pre-release: true
-status: projects
+status: released
 components:
   shipyard: 0b33f7c
   admiral: a91996d
   submariner: 5cb10c9
   lighthouse: 709bb81
+  submariner-operator: 8d9b4d8
+  submariner-charts: c22af2a
