--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -25,12 +25,10 @@ jobs:
           free -h
 
       - name: Run E2E deployment and tests
-        run: |
-          make e2e using="${{ matrix.globalnet }}"
+        uses: submariner-io/shipyard/gh-actions/e2e@devel
+        with:
+          globalnet: ${{ matrix.globalnet }}
 
-      - name: Post Mortem
+      - name: Post mortem
         if: failure()
-        run: |
-          df -h
-          free -h
-          make post-mortem
+        uses: submariner-io/shipyard/gh-actions/post-mortem@devel
