--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -17,17 +17,10 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Reclaim free space!
-        run: |
-          sudo swapoff -a
-          sudo rm -f /swapfile
-          df -h
-          free -h
-
       - name: Run E2E deployment and tests
         uses: submariner-io/shipyard/gh-actions/e2e@devel
         with:
-          globalnet: ${{ matrix.globalnet }}
+          using: ${{ matrix.globalnet }}
 
       - name: Post mortem
         if: failure()
