--- a/releases/v0.9.0-m2.yaml
+++ b/releases/v0.9.0-m2.yaml
@@ -3,6 +3,7 @@ version: v0.9.0-m2
 name: 0.9.0-m2
 pre-release: true
 release-notes: https://github.com/submariner-io/submariner-website/pull/457
-status: shipyard
+status: admiral
 components:
   shipyard: 0a66625075ed8114d09221a8d6c9a78718794031
+  admiral: 4abac3d9a5604f1ea56488d03e399dbb83fb52ef
