--- a/releases/v0.9.0-m2.yaml
+++ b/releases/v0.9.0-m2.yaml
@@ -3,9 +3,11 @@ version: v0.9.0-m2
 name: 0.9.0-m2
 pre-release: true
 release-notes: https://github.com/submariner-io/submariner-website/pull/457
-status: projects
+status: released
 components:
   shipyard: 0a66625075ed8114d09221a8d6c9a78718794031
   admiral: 4abac3d9a5604f1ea56488d03e399dbb83fb52ef
   submariner: 5e6cb045bc18ed10159d10f6466e476eb818f930
   lighthouse: 04abb08012a004b131474f4f81332839159fe5cd
+  submariner-charts: b02dce884fe0799b95e5da3eb6bfd644737f761b
+  submariner-operator: a706c79b7b63c6d09914ce374e7c507b71ef21cb
