--- a/releases/v0.9.0-rc0.yaml
+++ b/releases/v0.9.0-rc0.yaml
@@ -3,9 +3,11 @@ version: v0.9.0-rc0
 name: 0.9.0-rc0
 pre-release: true
 release-notes: https://github.com/submariner-io/submariner-website/pull/457
-status: projects
+status: released
 components:
   shipyard: 6f2994a9153020a12187e89e3cad46f4e7f56319
   admiral: 339b67a
   submariner: 827e49fef169c06063b24d67fc856579b2d8a211
   lighthouse: 4fe08405a02491c8454fb1a411bc96a3d89e9357
+  submariner-operator: 7910ebf2b3431265e614bb209eee6ff92b2f610d
+  submariner-charts: b02dce884fe0799b95e5da3eb6bfd644737f761b
