Add cloud-prepare to release process
Cloud-prepare should be released as part of our unified release process.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/example-partial.yaml
+++ b/releases/example-partial.yaml
@@ -22,4 +22,5 @@ components:
   shipyard: 2254d86 # Only used if status is 'shipyard'
   admiral: a69b58d # Only used if status is 'admiral'
   submariner: 7ffe614 # Only used if status is 'projects'
+  cloud-prepare: 6729657 # Only used if status is 'projects'
   lighthouse: 6c78a05 # Only used if status is 'projects'
