--- a/releases/example.yaml
+++ b/releases/example.yaml
@@ -21,6 +21,7 @@ components:
   admiral: v0.6.1  # tag is possible
   submariner: 7ffe614 # short commit-id is accepted
   lighthouse: v0.6.1
+  cloud-prepare: 6729657
   submariner-operator: v0.6.1
   submariner-charts: 7cc50b03d3f6e3bc4fa75a6db344dea87693dea3 # full commit-id also
   shipyard: v0.6.1
