--- a/releases/v0.9.0.yaml
+++ b/releases/v0.9.0.yaml
@@ -2,5 +2,7 @@
 version: v0.9.0
 name: 0.9.0
 branch: release-0.9
-status: branch
-# bump
+release-notes: https://github.com/submariner-io/submariner-website/pull/457
+status: shipyard
+components:
+  shipyard: 44d5d9e
