--- a/releases/v0.9.0.yaml
+++ b/releases/v0.9.0.yaml
@@ -3,7 +3,9 @@ version: v0.9.0
 name: 0.9.0
 branch: release-0.9
 release-notes: https://github.com/submariner-io/submariner-website/pull/457
-status: admiral
+status: projects
 components:
   shipyard: 44d5d9e
   admiral: b860739
+  submariner: 18e5c08
+  lighthouse: d5c3f0e
