Implement intial step of creating the file
Initially we create the release file with eaither statu shipyard, or set
to branch out in case of GA.
Made release-notes optional since this command won't fill them

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -10,3 +10,4 @@ ENV DAPPER_OUTPUT=${DAPPER_SOURCE}/output \
 RUN curl -L https://github.com/cli/cli/releases/download/v${GH_VERSION}/gh_${GH_VERSION}_linux_${ARCH}.tar.gz | tar xzf - && mv gh_${GH_VERSION}_linux_${ARCH}/bin/gh /usr/bin/ && rm -rf gh_${GH_VERSION}_linux_${ARCH}
 
 WORKDIR ${DAPPER_SOURCE}
+ENTRYPOINT ["/opt/shipyard/scripts/entry"]
