--- a/releases/v0.10.0-m2.yaml
+++ b/releases/v0.10.0-m2.yaml
@@ -2,6 +2,7 @@
 version: v0.10.0-m2
 name: 0.10.0-m2
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: 3001be81057f2777abc830d3a3675b0c144c139f
+  admiral: 41b86d65b7e840ee3c76d971e0f622b5216372ed
