Fix target release detection
Seems that on pull request (and perhaps if we merge a PR with a merge
commit) the auto detection of commit fails because it only considers the
merge commit.

Now if will take the commit right before the merge commit in case the
latest commit is a merge commit.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Validate release YAMLs
         run: make validate
