--- a/releases/v0.10.0-rc0.yaml
+++ b/releases/v0.10.0-rc0.yaml
@@ -2,6 +2,7 @@
 version: v0.10.0-rc0
 name: 0.10.0-rc0
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: a241462f1f590d8b415698cd35da0592b3f1be31
+  admiral: 3a30b646ddb1c5abc8c28e92d22f76b7a3e1acb3
