Advancing 0.10.0-rc1 release to status: released
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>

--- a/releases/v0.10.0-rc1.yaml
+++ b/releases/v0.10.0-rc1.yaml
@@ -2,10 +2,12 @@
 version: v0.10.0-rc1
 name: 0.10.0-rc1
 pre-release: true
-status: projects
+status: released
 components:
   shipyard: d57324518bcb5a954c0f5cf500742a1953059de6
   admiral: d931643dcc2957235ce8ac209f4828c0f450c944
   submariner: 409357819eae26e405c42464ccf3d678d64a1fc7
   cloud-prepare: 51412b511eeaf2b697e5210ab27b31fac495ed7f
   lighthouse: 28fbad1f70009679033706b502497b5f50ac04b0
+  submariner-operator: 47268fb9eb09e8478c139b1c1d681176110f1bf7
+  submariner-charts: cb78ab7aaa1d8d6ed3f41d8881e5987e73069dff
