Advancing 0.10.1 release to status: admiral
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>

--- a/releases/v0.10.1.yaml
+++ b/releases/v0.10.1.yaml
@@ -1,7 +1,8 @@
 ---
 version: v0.10.1
 name: 0.10.1
-status: shipyard
+status: admiral
 branch: release-0.10
 components:
   shipyard: a2dc8db071de45bb473f3811d2b4232fb5a250b3
+  admiral: 78b546c8ce88c36bbcbbfb23c42e888de4e4e38e
