Advancing 0.11.0-m2 release to status: admiral
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>

--- a/releases/v0.11.0-m2.yaml
+++ b/releases/v0.11.0-m2.yaml
@@ -2,6 +2,7 @@
 version: v0.11.0-m2
 name: 0.11.0-m2
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: 60a7326c0708cdcd83d2925e491de3e62af0f90c
+  admiral: 4336f4cc6b145538bcec70300af0662ed70c9844
