--- a/releases/v0.11.0-rc0.yaml
+++ b/releases/v0.11.0-rc0.yaml
@@ -2,6 +2,7 @@
 version: v0.11.0-rc0
 name: 0.11.0-rc0
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: bc55c6c5dcf3fdee4078e4a95f05f17fe32309fa
+  admiral: c2fdd2063793ae5e5d61b7f3d1c652b5c61f1300
