--- a/releases/v0.11.0-rc1.yaml
+++ b/releases/v0.11.0-rc1.yaml
@@ -2,6 +2,7 @@
 version: v0.11.0-rc1
 name: 0.11.0-rc1
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: bc55c6c5dcf3fdee4078e4a95f05f17fe32309fa
+  admiral: fdce8f885ee7a5eea926107887c13c22ac891943
