--- a/releases/v0.11.0-rc2.yaml
+++ b/releases/v0.11.0-rc2.yaml
@@ -2,5 +2,7 @@
 version: v0.11.0-rc2
 name: 0.11.0-rc2
 pre-release: true
-status: branch
+status: shipyard
 branch: release-0.11
+components:
+  shipyard: de7a06d8cb9418bc2e455536f44bdccc788b1b21
