Advancing 0.11.0-rc2 release to status: admiral
Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.11.0-rc2.yaml
+++ b/releases/v0.11.0-rc2.yaml
@@ -2,7 +2,8 @@
 version: v0.11.0-rc2
 name: 0.11.0-rc2
 pre-release: true
-status: shipyard
+status: admiral
 branch: release-0.11
 components:
   shipyard: de7a06d8cb9418bc2e455536f44bdccc788b1b21
+  admiral: 966b3193cda4b1d709f6df4e7952c2c0064233b0
