Advancing 0.11.0-rc2 release to status: released
Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.11.0-rc2.yaml
+++ b/releases/v0.11.0-rc2.yaml
@@ -2,7 +2,7 @@
 version: v0.11.0-rc2
 name: 0.11.0-rc2
 pre-release: true
-status: projects
+status: released
 branch: release-0.11
 components:
   shipyard: de7a06d8cb9418bc2e455536f44bdccc788b1b21
@@ -10,3 +10,5 @@ components:
   submariner: 7aac246cbfa5895325b8a5d46204ec7c212e84f7
   cloud-prepare: ce1381b955ef397d58386eb4a8d288ba64bb69cf
   lighthouse: 48ed8101f70ec3bea13e74dde9514ae3297c8881
+  submariner-operator: be1e500a254ba82d6d19d7425e4019800a086f9c
+  submariner-charts: 14e85ad47617fd7b01a40b048743234c6cf09bc8
