--- a/releases/v0.11.0.yaml
+++ b/releases/v0.11.0.yaml
@@ -2,4 +2,6 @@
 version: v0.11.0
 name: 0.11.0
 branch: release-0.11
-status: branch
+status: shipyard
+components:
+  shipyard: de7a06d8cb9418bc2e455536f44bdccc788b1b21
