--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -4,10 +4,7 @@ FROM quay.io/submariner/shipyard-dapper-base:devel
 COPY --from=yq /usr/bin/yq /usr/bin/
 ENV DAPPER_SOURCE=/releases PATH=/releases/scripts:$PATH DAPPER_DOCKER_SOCKET=true \
     DAPPER_ENV="GIT_EMAIL GIT_NAME GITHUB_ACTOR GITHUB_TOKEN MAKEFLAGS QUAY_USERNAME QUAY_PASSWORD RELEASE_TOKEN"
-ENV DAPPER_OUTPUT=${DAPPER_SOURCE}/output \
-    GH_VERSION=1.10.3
-
-RUN curl -L https://github.com/cli/cli/releases/download/v${GH_VERSION}/gh_${GH_VERSION}_linux_${ARCH}.tar.gz | tar xzf - && mv gh_${GH_VERSION}_linux_${ARCH}/bin/gh /usr/bin/ && rm -rf gh_${GH_VERSION}_linux_${ARCH}
+ENV DAPPER_OUTPUT=${DAPPER_SOURCE}/output
 
 WORKDIR ${DAPPER_SOURCE}
 ENTRYPOINT ["/opt/shipyard/scripts/entry"]
