--- a/releases/v0.12.0-m0.yaml
+++ b/releases/v0.12.0-m0.yaml
@@ -2,6 +2,7 @@
 version: v0.12.0-m0
 name: 0.12.0-m0
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: 5f3ceac7b116de56df886ebab0e5b1690da8b846
+  admiral: 48a94e0adb1d58efdd5e36401ed3ddfb8c3149e2
