Advancing 0.12.0-m1 release to status: released
Signed-off-by: Maayan Friedman <maafried@redhat.com>

--- a/releases/v0.12.0-m1.yaml
+++ b/releases/v0.12.0-m1.yaml
@@ -2,10 +2,12 @@
 version: v0.12.0-m1
 name: 0.12.0-m1
 pre-release: true
-status: projects
+status: released
 components:
   shipyard: edbecd0ba223aa80253664c1c9bee290e4a3aec1
   admiral: d65a7904ef3b9c5eaddbae6ca946932e946f62dc
   submariner: f4f3ed178d2d18f0afe152cc154b70ae426306c5
   cloud-prepare: 62662df8c42b440f76acf403837a16b50bf91a5b
   lighthouse: 8be290feb9b8d98c03032412dc5ab4ede68b50b2
+  submariner-operator: 1545534ccc9aa846f51b1e55ad8cd9bb9a3fd8f7
+  submariner-charts: 2cfbd5c394c00deafec167a2264363b61869199e
