--- a/releases/v0.12.0-m3.yaml
+++ b/releases/v0.12.0-m3.yaml
@@ -2,7 +2,10 @@
 version: v0.12.0-m3
 name: 0.12.0-m3
 pre-release: true
-status: admiral
+status: projects
 components:
   shipyard: cb75f4e0b2b1a0c9d766a6a8d4bedec1f44ef033
   admiral: ae07821735182a1374e1dab3e29d2319324a59d0
+  submariner: b5483309a730d9482d0f4cb9042eba2594dfa16a
+  cloud-prepare: 76901633a6f53fd2dd0d08a389b4e3c7cf993272
+  lighthouse: 97582c69d24d1bc57b082186c05d3619be2b1608
