Advancing 0.11.2 release to status: admiral
Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.11.2.yaml
+++ b/releases/v0.11.2.yaml
@@ -2,6 +2,7 @@
 version: v0.11.2
 name: 0.11.2
 branch: release-0.11
-status: shipyard
+status: admiral
 components:
   shipyard: de7a06d8cb9418bc2e455536f44bdccc788b1b21
+  admiral: f8381e21c7775baeb560af76581b0558f91ebde2
