--- a/releases/v0.12.1.yaml
+++ b/releases/v0.12.1.yaml
@@ -2,6 +2,7 @@
 version: v0.12.1
 name: 0.12.1
 branch: release-0.12
-status: shipyard
+status: admiral
 components:
   shipyard: 822e47ac14dffa5f07daa6de7d3ba0deeeca7e83
+  admiral: 70a27694f34ca62e9b23469d4b3acf35a570b2ee
