--- a/releases/v0.13.0-m1.yaml
+++ b/releases/v0.13.0-m1.yaml
@@ -2,6 +2,7 @@
 version: v0.13.0-m1
 name: 0.13.0-m1
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: af869826429ddd13e8347de3985f7cd3e7a1d7d1
+  admiral: 76909161138906d24d4e0c726c057569c0ce4deb
