--- a/releases/v0.13.0-m2.yaml
+++ b/releases/v0.13.0-m2.yaml
@@ -2,10 +2,12 @@
 version: v0.13.0-m2
 name: 0.13.0-m2
 pre-release: true
-status: projects
+status: installers
 components:
   shipyard: e82a3e3e849fce4d017f3a74d9a66789a1e1cc1c
   admiral: a0207e0ca0c1cb8190691d9b3e05fc044bebe4d0
   cloud-prepare: a59e5b24dbf1435bdaaf6907c2ba45b90bbc5d15
   lighthouse: d219dc061f53004b7ca87f1505a64f534712fec9
   submariner: f55a4d1be40052059b68e1406bbab2e0973aff0c
+  submariner-charts: f4510d182a379cbaf73affae568fe29cf1f69a4a
+  submariner-operator: f3cca554a6044c06c2c375d235ad6b2cd41f82dc
