--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -7,6 +7,7 @@ ENV DAPPER_OUTPUT=${DAPPER_SOURCE}/output
 
 WORKDIR ${DAPPER_SOURCE}
 
-RUN git config --global --add safe.directory ${DAPPER_SOURCE}
+# We have a bunch of git repos to handle directly. Turn off the checking globally instead of listing (and maintaining) the entire list
+RUN git config --global --add safe.directory *
 
 ENTRYPOINT ["/opt/shipyard/scripts/entry"]
