--- a/releases/v0.13.0-rc0.yaml
+++ b/releases/v0.13.0-rc0.yaml
@@ -3,4 +3,6 @@ version: v0.13.0-rc0
 name: 0.13.0-rc0
 pre-release: true
 branch: release-0.13
-status: branch
+status: shipyard
+components:
+  shipyard: e63cdfc7cee944002e681a2db26fb45d12cb10c3
